Biblioteka/k8s/biblioteka-cn-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblioteka-cn-deployment
  labels:
    app: biblioteka-cn-deployment
spec:
  selector:
    matchLabels:
      app: biblioteka-cn-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: biblioteka-cn-deployment
    spec:
      containers:
        - name: mdb
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
            - name: cndb-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
        - name: biblioteka-cn
          image: aleksapapovic/biblioteka_cn:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            # - containerPort: 8081
          # volumeMounts:
          #   - name: user-secrets
          #     mountPath: /home/app/.microsoft/usersecrets
          #     readOnly: true
          #   - name: aspnet-https
          #     mountPath: /home/app/.aspnet/https
          #     readOnly: true

      volumes:
        - name: cndb-storage
          persistentVolumeClaim:
            claimName: cndb-pvc
        - name: init-script
          configMap:
            name: cndb-init-script
        # - name: user-secrets
        #   hostPath:
        #     path: C:/Users/papov/AppData/Roaming/Microsoft/UserSecrets
        # - name: aspnet-https
        #   hostPath:
        #     path: C:/Users/papov/AppData/Roaming/ASP.NET/Https
---
apiVersion: v1
kind: Service
metadata:
  name: cndb
  labels:
    app: cndb
spec:
  # type: ClusterIP
  selector:
    app: biblioteka-cn-deployment
  ports:
    - name: http
      port: 9000
      targetPort: 8080
    # - name: https
    #   port: 8081
    #   targetPort: 9001
    # - name: db
    #   port: 5432
    #   targetPort: 5432
