Biblioteka/k8s/biblioteka-ni-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblioteka-ni-deployment
spec:
  selector:
    matchLabels:
      app: biblioteka-ni-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: biblioteka-ni-deployment
    spec:
      containers:
        - name: mdb
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
            - name: nidb-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
        - name: biblioteka-ni
          image: aleksapapovic/biblioteka_ek:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            # - containerPort: 8081
          # volumeMounts:
          #   - name: user-secrets
          #     mountPath: /home/app/.microsoft/usersecrets
          #     readOnly: true
          #   - name: aspnet-https
          #     mountPath: /home/app/.aspnet/https
          #     readOnly: true

      volumes:
        - name: nidb-storage
          persistentVolumeClaim:
            claimName: nidb-pvc
        - name: init-script
          configMap:
            name: nidb-init-script
        # - name: user-secrets
        #   hostPath:
        #     path: C:/Users/papov/AppData/Roaming/Microsoft/UserSecrets
        # - name: aspnet-https
        #   hostPath:
        #     path: C:/Users/papov/AppData/Roaming/ASP.NET/Https
---
apiVersion: v1
kind: Service
metadata:
  name: nidb
spec:
  type: ClusterIP
  selector:
    component: biblioteka-ni-deployment
  ports:
    - name: http
      port: 8080
      targetPort: 9030
    # - name: https
    #   port: 8081
    #   targetPort: 9031
    - name: db
      port: 5432
      targetPort: 5432
