Biblioteka/k8s/biblioteka-ns-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblioteka-ns-deployment
  labels:
    app: biblioteka-ns-deployment
spec:
  selector:
    matchLabels:
      app: biblioteka-ns-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: biblioteka-ns-deployment
    spec:
      containers:
        - name: mdb
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
            - name: nsdb-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
        - name: biblioteka-ns
          image: aleksapapovic/biblioteka_ek:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            # - containerPort: 8081
          # volumeMounts:
          #   - name: user-secrets
          #     mountPath: /home/app/.microsoft/usersecrets
          #     readOnly: true
          #   - name: aspnet-https
          #     mountPath: /home/app/.aspnet/https
          #     readOnly: true

      volumes:
        - name: nsdb-storage
          persistentVolumeClaim:
            claimName: nsdb-pvc
        - name: init-script
          configMap:
            name: nsdb-init-script
        # - name: user-secrets
        #   hostPath:
        #     path: C:/Users/papov/AppData/Roaming/Microsoft/UserSecrets
        # - name: aspnet-https
        #   hostPath:
        #     path: C:/Users/papov/AppData/Roaming/ASP.NET/Https
---
apiVersion: v1
kind: Service
metadata:
  name: nsdb
  labels:
    app: nsdb
spec:
  # type: ClusterIP
  selector:
    app: biblioteka-ns-deployment
  ports:
    - name: http
      port: 9010
      targetPort: 8080
    # - name: https
    #   port: 8081
    #   targetPort: 9011
    # - name: db
    #   port: 5432
    #   targetPort: 5432
