Biblioteka/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /ns
            pathType: Prefix
            backend:
              service:
                name: nsdb
                port:
                  number: 9010
          - path: /bg
            pathType: Prefix
            backend:
              service:
                name: bgdb
                port:
                  number: 9020
          - path: /ni
            pathType: Prefix
            backend:
              service:
                name: nidb
                port:
                  number: 9030
